remove mockito, add failing test