@@ -1,33 +1,22 @@
 package a2.fmod;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
 
 import a2.AudioEngineConfig;
 import a2.AudioHandle;
 import a2.exceptions.AudioLoadException;
-import a2.exceptions.CorruptedAudioFileException;
-import a2.exceptions.UnsupportedAudioFormatException;
-import com.sun.jna.Memory;
-import com.sun.jna.Pointer;
-import com.sun.jna.ptr.PointerByReference;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.concurrent.atomic.AtomicInteger;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
-import org.mockito.ArgumentCaptor;
-import org.mockito.InOrder;
 
 /** Tests for FmodAudioEngine loadAudio() method. */
 class FmodAudioEngineLoadAudioTest {
 
     private FmodAudioEngine engine;
-    private FmodAudioEngine spyEngine;
     private AudioEngineConfig config;
-    private FmodLibrary mockFmod;
 
     @TempDir Path tempDir;
 
@@ -39,40 +28,31 @@ class FmodAudioEngineLoadAudioTest {
                         .engineType("fmod")
                         .mode(AudioEngineConfig.Mode.PLAYBACK)
                         .build();
-        mockFmod = mock(FmodLibrary.class);
+        engine.init(config);
+    }
 
-        // Create spy that returns mock library
-        spyEngine = spy(engine);
-        doReturn(mockFmod).when(spyEngine).doLoadFmodLibrary();
-
-        // Setup successful init mocks
-        setupSuccessfulInit();
-        spyEngine.init(config);
+    @AfterEach
+    void tearDown() {
+        if (engine != null) {
+            engine.close();
+        }
     }
 
     @Test
     void testLoadValidFile() throws Exception {
-        // Create a real temp file
+        // Create a simple WAV file header (44 bytes)
+        // This is a minimal valid WAV header for a 1-second 44.1kHz mono file
+        byte[] wavHeader = createMinimalWavHeader();
         Path audioFile = tempDir.resolve("test.wav");
-        Files.writeString(audioFile, "fake audio data");
-
-        // Setup FMOD mock to succeed
-        Pointer mockSound = new Memory(8);
-        setupSuccessfulCreateSound(mockSound);
+        Files.write(audioFile, wavHeader);
 
         // Load the file
-        AudioHandle handle = spyEngine.loadAudio(audioFile.toString());
+        AudioHandle handle = engine.loadAudio(audioFile.toString());
 
         // Verify handle is valid
         assertNotNull(handle);
         assertTrue(handle.isValid());
         assertEquals(audioFile.toFile().getCanonicalPath(), handle.getFilePath());
-
-        // Verify FMOD was called correctly
-        ArgumentCaptor<String> pathCaptor = ArgumentCaptor.forClass(String.class);
-        verify(mockFmod)
-                .FMOD_System_CreateSound(any(), pathCaptor.capture(), anyInt(), isNull(), any());
-        assertEquals(audioFile.toFile().getCanonicalPath(), pathCaptor.getValue());
     }
 
     @Test
@@ -80,190 +60,173 @@ class FmodAudioEngineLoadAudioTest {
         String nonExistentPath = "/does/not/exist/audio.wav";
 
         AudioLoadException ex =
-                assertThrows(AudioLoadException.class, () -> spyEngine.loadAudio(nonExistentPath));
+                assertThrows(AudioLoadException.class, () -> engine.loadAudio(nonExistentPath));
 
         assertTrue(ex.getMessage().contains("Audio file not found"));
         assertTrue(ex.getMessage().contains(nonExistentPath));
-
-        // Verify FMOD was never called
-        verify(mockFmod, never()).FMOD_System_CreateSound(any(), any(), anyInt(), any(), any());
     }
 
     @Test
     void testLoadSameFileTwice() throws Exception {
-        // Create a real temp file
+        // Create a valid WAV file
+        byte[] wavHeader = createMinimalWavHeader();
         Path audioFile = tempDir.resolve("test.wav");
-        Files.writeString(audioFile, "fake audio data");
-
-        // Setup FMOD mock
-        Pointer mockSound = new Memory(8);
-        setupSuccessfulCreateSound(mockSound);
+        Files.write(audioFile, wavHeader);
 
         // Load the file twice
-        AudioHandle first = spyEngine.loadAudio(audioFile.toString());
-        AudioHandle second = spyEngine.loadAudio(audioFile.toString());
+        AudioHandle first = engine.loadAudio(audioFile.toString());
+        AudioHandle second = engine.loadAudio(audioFile.toString());
 
         // Should return the same handle
         assertSame(first, second);
         assertEquals(first.getId(), second.getId());
-
-        // FMOD should only be called once
-        verify(mockFmod, times(1)).FMOD_System_CreateSound(any(), any(), anyInt(), any(), any());
-        verify(mockFmod, never()).FMOD_Sound_Release(any());
     }
 
     @Test
     void testLoadDifferentFile() throws Exception {
-        // Create two temp files
+        // Create two valid WAV files
+        byte[] wavHeader = createMinimalWavHeader();
         Path file1 = tempDir.resolve("file1.wav");
         Path file2 = tempDir.resolve("file2.wav");
-        Files.writeString(file1, "audio 1");
-        Files.writeString(file2, "audio 2");
-
-        // Setup FMOD mocks
-        Pointer sound1 = new Memory(8);
-        Pointer sound2 = new Memory(16);
-        when(mockFmod.FMOD_System_CreateSound(any(), any(), anyInt(), any(), any()))
-                .thenAnswer(
-                        inv -> {
-                            PointerByReference ref = inv.getArgument(4);
-                            String path = inv.getArgument(1);
-                            ref.setValue(path.contains("file1") ? sound1 : sound2);
-                            return FmodConstants.FMOD_OK;
-                        });
-        when(mockFmod.FMOD_Sound_Release(any())).thenReturn(FmodConstants.FMOD_OK);
-        when(mockFmod.FMOD_System_Update(any())).thenReturn(FmodConstants.FMOD_OK);
+        Files.write(file1, wavHeader);
+        Files.write(file2, wavHeader);
 
         // Load first file
-        AudioHandle handle1 = spyEngine.loadAudio(file1.toString());
+        AudioHandle handle1 = engine.loadAudio(file1.toString());
         assertNotNull(handle1);
 
         // Load second file
-        AudioHandle handle2 = spyEngine.loadAudio(file2.toString());
+        AudioHandle handle2 = engine.loadAudio(file2.toString());
         assertNotNull(handle2);
 
         // Should be different handles
         assertNotSame(handle1, handle2);
         assertNotEquals(handle1.getId(), handle2.getId());
 
-        // Verify first sound was released
-        verify(mockFmod).FMOD_Sound_Release(sound1);
-        verify(mockFmod).FMOD_System_Update(any());
-
-        // Verify both sounds were created
-        verify(mockFmod, times(2)).FMOD_System_CreateSound(any(), any(), anyInt(), any(), any());
+        // First handle should be invalidated
+        assertFalse(handle1.isValid());
+        assertTrue(handle2.isValid());
     }
 
     @Test
-    void testFmodErrorMapping() throws Exception {
+    void testLoadInvalidAudioFile() throws Exception {
+        // Create a file with invalid content (not a valid audio file)
+        Path invalidFile = tempDir.resolve("invalid.wav");
+        Files.writeString(invalidFile, "This is not audio data");
+
+        // Should throw an exception for invalid format
+        assertThrows(Exception.class, () -> engine.loadAudio(invalidFile.toString()));
+    }
+
+    @Test
+    void testLoadEmptyFile() throws Exception {
+        // Create an empty file
+        Path emptyFile = tempDir.resolve("empty.wav");
+        Files.write(emptyFile, new byte[0]);
+
+        // Should throw an exception for empty/invalid file
+        assertThrows(Exception.class, () -> engine.loadAudio(emptyFile.toString()));
+    }
+
+    @Test
+    void testPathNormalization() throws Exception {
+        // Create a valid WAV file
+        byte[] wavHeader = createMinimalWavHeader();
         Path audioFile = tempDir.resolve("test.wav");
-        Files.writeString(audioFile, "fake audio");
+        Files.write(audioFile, wavHeader);
 
-        // Test FILE_NOTFOUND error
-        when(mockFmod.FMOD_System_CreateSound(any(), any(), anyInt(), any(), any()))
-                .thenReturn(FmodConstants.FMOD_ERR_FILE_NOTFOUND);
-        when(mockFmod.FMOD_ErrorString(anyInt())).thenReturn("File not found");
+        // Load with different path representations
+        String absolutePath = audioFile.toString();
+        String withDotPath = tempDir.resolve("./test.wav").toString();
 
-        assertThrows(AudioLoadException.class, () -> spyEngine.loadAudio(audioFile.toString()));
+        AudioHandle handle1 = engine.loadAudio(absolutePath);
+        AudioHandle handle2 = engine.loadAudio(withDotPath);
 
-        // Test FORMAT error
-        when(mockFmod.FMOD_System_CreateSound(any(), any(), anyInt(), any(), any()))
-                .thenReturn(FmodConstants.FMOD_ERR_FORMAT);
-
-        assertThrows(
-                UnsupportedAudioFormatException.class,
-                () -> spyEngine.loadAudio(audioFile.toString()));
-
-        // Test FILE_BAD error
-        when(mockFmod.FMOD_System_CreateSound(any(), any(), anyInt(), any(), any()))
-                .thenReturn(FmodConstants.FMOD_ERR_FILE_BAD);
-
-        assertThrows(
-                CorruptedAudioFileException.class, () -> spyEngine.loadAudio(audioFile.toString()));
+        // Should recognize as the same file
+        assertSame(handle1, handle2);
     }
 
     @Test
-    void testResourceCleanup() throws Exception {
-        // Create test files
-        Path file1 = tempDir.resolve("file1.wav");
-        Path file2 = tempDir.resolve("file2.wav");
-        Files.writeString(file1, "audio 1");
-        Files.writeString(file2, "audio 2");
-
-        // Setup mocks
-        Pointer sound1 = new Memory(8);
-        Pointer sound2 = new Memory(16);
-        AtomicInteger callCount = new AtomicInteger(0);
-        when(mockFmod.FMOD_System_CreateSound(any(), any(), anyInt(), any(), any()))
-                .thenAnswer(
-                        inv -> {
-                            PointerByReference ref = inv.getArgument(4);
-                            ref.setValue(callCount.getAndIncrement() == 0 ? sound1 : sound2);
-                            return FmodConstants.FMOD_OK;
-                        });
-        when(mockFmod.FMOD_Sound_Release(any())).thenReturn(FmodConstants.FMOD_OK);
-        when(mockFmod.FMOD_System_Update(any())).thenReturn(FmodConstants.FMOD_OK);
-
-        // Load files
-        spyEngine.loadAudio(file1.toString());
-        spyEngine.loadAudio(file2.toString());
-
-        // Verify proper cleanup sequence
-        InOrder inOrder = inOrder(mockFmod);
-        inOrder.verify(mockFmod)
-                .FMOD_System_CreateSound(any(), contains("file1"), anyInt(), any(), any());
-        inOrder.verify(mockFmod).FMOD_Sound_Release(sound1);
-        inOrder.verify(mockFmod).FMOD_System_Update(any());
-        inOrder.verify(mockFmod)
-                .FMOD_System_CreateSound(any(), contains("file2"), anyInt(), any(), any());
-    }
-
-    @Test
-    void testFmodFlagsUsed() throws Exception {
+    void testLoadAfterClose() throws Exception {
+        // Create a valid WAV file
+        byte[] wavHeader = createMinimalWavHeader();
         Path audioFile = tempDir.resolve("test.wav");
-        Files.writeString(audioFile, "audio");
+        Files.write(audioFile, wavHeader);
 
-        Pointer mockSound = new Memory(8);
-        setupSuccessfulCreateSound(mockSound);
+        // Close the engine
+        engine.close();
 
-        spyEngine.loadAudio(audioFile.toString());
-
-        // Verify correct FMOD flags were used
-        ArgumentCaptor<Integer> modeCaptor = ArgumentCaptor.forClass(Integer.class);
-        verify(mockFmod).FMOD_System_CreateSound(any(), any(), modeCaptor.capture(), any(), any());
-
-        int mode = modeCaptor.getValue();
-        assertTrue((mode & FmodConstants.FMOD_CREATESTREAM) != 0, "Should use CREATESTREAM");
-        assertTrue((mode & FmodConstants.FMOD_ACCURATETIME) != 0, "Should use ACCURATETIME");
+        // Try to load - should fail
+        assertThrows(Exception.class, () -> engine.loadAudio(audioFile.toString()));
     }
 
-    // Helper methods
+    /**
+     * Creates a minimal valid WAV file header. This is a 44-byte header for a 1-second, 44.1kHz,
+     * 16-bit mono file.
+     */
+    private byte[] createMinimalWavHeader() {
+        byte[] header = new byte[44];
 
-    private void setupSuccessfulInit() {
-        Pointer mockSystem = new Memory(8);
-        when(mockFmod.FMOD_System_Create(any(PointerByReference.class), anyInt()))
-                .thenAnswer(
-                        inv -> {
-                            PointerByReference ref = inv.getArgument(0);
-                            ref.setValue(mockSystem);
-                            return FmodConstants.FMOD_OK;
-                        });
-        when(mockFmod.FMOD_System_Init(any(), anyInt(), anyInt(), any()))
-                .thenReturn(FmodConstants.FMOD_OK);
-        when(mockFmod.FMOD_System_SetDSPBufferSize(any(), anyInt(), anyInt()))
-                .thenReturn(FmodConstants.FMOD_OK);
-        when(mockFmod.FMOD_System_SetSoftwareFormat(any(), anyInt(), anyInt(), anyInt()))
-                .thenReturn(FmodConstants.FMOD_OK);
-        when(mockFmod.FMOD_ErrorString(anyInt())).thenReturn("Test error");
-    }
+        // RIFF header
+        header[0] = 'R';
+        header[1] = 'I';
+        header[2] = 'F';
+        header[3] = 'F';
+        // File size - 36 (36 + 8 = 44 bytes total)
+        header[4] = 36;
+        header[5] = 0;
+        header[6] = 0;
+        header[7] = 0;
+        // WAVE header
+        header[8] = 'W';
+        header[9] = 'A';
+        header[10] = 'V';
+        header[11] = 'E';
 
-    private void setupSuccessfulCreateSound(Pointer sound) {
-        when(mockFmod.FMOD_System_CreateSound(any(), any(), anyInt(), any(), any()))
-                .thenAnswer(
-                        inv -> {
-                            PointerByReference ref = inv.getArgument(4);
-                            ref.setValue(sound);
-                            return FmodConstants.FMOD_OK;
-                        });
+        // fmt subchunk
+        header[12] = 'f';
+        header[13] = 'm';
+        header[14] = 't';
+        header[15] = ' ';
+        // Subchunk size (16 for PCM)
+        header[16] = 16;
+        header[17] = 0;
+        header[18] = 0;
+        header[19] = 0;
+        // Audio format (1 = PCM)
+        header[20] = 1;
+        header[21] = 0;
+        // Number of channels (1 = mono)
+        header[22] = 1;
+        header[23] = 0;
+        // Sample rate (44100 Hz)
+        header[24] = 0x44;
+        header[25] = (byte) 0xAC;
+        header[26] = 0;
+        header[27] = 0;
+        // Byte rate (44100 * 1 * 2 = 88200)
+        header[28] = (byte) 0x88;
+        header[29] = 0x58;
+        header[30] = 0x01;
+        header[31] = 0;
+        // Block align (1 * 2 = 2)
+        header[32] = 2;
+        header[33] = 0;
+        // Bits per sample (16)
+        header[34] = 16;
+        header[35] = 0;
+
+        // data subchunk
+        header[36] = 'd';
+        header[37] = 'a';
+        header[38] = 't';
+        header[39] = 'a';
+        // Data size (0 for empty audio)
+        header[40] = 0;
+        header[41] = 0;
+        header[42] = 0;
+        header[43] = 0;
+
+        return header;
     }
 }
